# Binance-Bot

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.jenkins  GUI_BUG_ANALYSIS.md  Jenkinsfile  PROJECT_STRUCTURE.md  QUICK_TEST_WALK_FORWARD.py  README.md  REORGANIZATION_SUMMARY.md  RUN_TESTS.bat  TEST_BASE_STRATEGY_INDEPENDENCE_SUMMARY.md  TEST_CONFIGURATION.md  TRADEPAIR_PURPOSE_ANALYSIS.md  UML_CLASS_DIAGRAM.puml  docker-compose.jenkins.yml  docker-compose.prod.yml  docker-compose.yml  env.example  execute_tests.py  fix-jenkins-docker.ps1  mark_tests_slow.py  pyproject.toml  pytest.ini  quick_test.py  redis.conf  requirements.txt  run_pytest_wf.py  run_tests_final.py  run_tests_now.py  run_walk_forward_tests.py  run_wf_test.bat  test_auto_tuning_e2e.py  test_auto_tuning_integration.py  test_circuit_breaker_fix.py  test_circular_import_fix.py  test_comparison_api_direct.html  test_enforcement_history_integration.py  test_missing_integrations.py  (+15 more)
alembic/: env.py
android-app/: .gitignore  AUTHENTICATION_FIX.md  GRADLE_COMPATIBILITY_FIX.md  GRADLE_FIX.md  README.md  build.gradle.kts  clean-gradle.ps1  find-java17.ps1  fix-jdk-cache.ps1  gradle.properties  settings.gradle.kts
app/: __init__.py  main.py
docs/: ANDROID_PAPER_TRADING_ALIGNMENT.md  API_USAGE.md  CANDLESTICK_DATA_EXAMPLE.md  DOCKER_DEPLOYMENT.md  EMA_CROSSOVER_EXPLANATION.md  JENKINS_DEPLOYMENT.md  JENKINS_DOCKER_FIX.md  JENKINS_DOCKER_IN_DOCKER.md  JENKINS_DOCKER_PERMISSIONS.md  JENKINS_FIX_EXCEPTIONS.md  JENKINS_SETUP.md  LOG_VIEWER.md  MARKET_ANALYZER.md  POSITION_CREATION_EVENTS.md  (+11 more)
(+593 files in other folders)
