[project]
name = "binance-bot"
version = "0.1.0"
description = "FastAPI-based Binance trading bot with pluggable strategies"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.2.1",
    "httpx>=0.27.0",
    "python-binance>=1.0.0",
    "python-dateutil>=2.8.2",
    "tenacity>=8.2.3",
    "loguru>=0.7.2",
    "redis>=5.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.5",
    "ruff>=0.6.0",
    "mypy>=1.9.0",
    "httpx>=0.27.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

